--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="shortcut icon" href="assets/icons/obnoxious.jpg" type="image/x-icon" />
     <script type="text/javascript" src="assets/javascript/app.js"></script>
+    <link rel="stylesheet" href="assets/stylesheets/stylesheet.min.css">
 </head>
 
 <body>
